facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__enum_with_multiple_attributes_per_variant.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(u8)]\n        enum ConfigValue {\n            #[facet(rename = \"TextValue\")]\n            Text(String),\n            #[facet(rename = \"NumberValue\")]\n            Number {\n                #[facet(rename = \"numValue\")]\n                value: f64,\n                #[facet(rename = \"unitName\", sensitive)]\n                unit: String,\n            },\n            #[facet(rename = \"BoolValue\")]\n            Boolean(bool),\n        }\n        \"#)"
---
#[used]
static CONFIG_VALUE_SHAPE: &'static ::facet::Shape = <ConfigValue as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for ConfigValue {
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __ShadowConfigValue_Text<'__facet> {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            _0: String,
        }
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __ShadowConfigValue_Number<'__facet> {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            value: f64,
            unit: String,
        }
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __ShadowConfigValue_Boolean<'__facet> {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            _0: bool,
        }
        let __facet_variants: &'static [::facet::Variant] = &const {
            [
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("_0")
                            .shape(|| {
                                ::facet::shape_of(&|s: &__ShadowConfigValue_Text<'__facet>| &s._0)
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowConfigValue_Text<'__facet>,
                                _0
                            ))
                            .flags(::facet::FieldFlags::EMPTY)
                            .attributes(&const { [] })
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("TextValue")
                        .attributes(&[::facet::VariantAttribute::Rename("TextValue")])
                        .discriminant(0i64)
                        .fields(::facet::StructDef::builder().tuple().fields(fields).build())
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] =
                        &const {
                            [
                                ::facet::Field::builder()
                                    .name("numValue")
                                    .shape(|| {
                                        ::facet::shape_of(
                                            &|s: &__ShadowConfigValue_Number<'__facet>| &s.value,
                                        )
                                    })
                                    .offset(::core::mem::offset_of!(
                                        __ShadowConfigValue_Number<'__facet>,
                                        value
                                    ))
                                    .flags(::facet::FieldFlags::EMPTY)
                                    .attributes(
                                        &const { [::facet::FieldAttribute::Rename("numValue")] },
                                    )
                                    .build(),
                                ::facet::Field::builder()
                                    .name("unitName")
                                    .shape(|| {
                                        ::facet::shape_of(
                                            &|s: &__ShadowConfigValue_Number<'__facet>| &s.unit,
                                        )
                                    })
                                    .offset(::core::mem::offset_of!(
                                        __ShadowConfigValue_Number<'__facet>,
                                        unit
                                    ))
                                    .flags(::facet::FieldFlags::SENSITIVE)
                                    .attributes(
                                        &const {
                                            [
                                                ::facet::FieldAttribute::Rename("unitName"),
                                                ::facet::FieldAttribute::Sensitive,
                                            ]
                                        },
                                    )
                                    .build(),
                            ]
                        };
                    ::facet::Variant::builder()
                        .name("NumberValue")
                        .attributes(&[::facet::VariantAttribute::Rename("NumberValue")])
                        .discriminant(1i64)
                        .fields(
                            ::facet::StructDef::builder()
                                .struct_()
                                .fields(fields)
                                .build(),
                        )
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("_0")
                            .shape(|| {
                                ::facet::shape_of(&|s: &__ShadowConfigValue_Boolean<'__facet>| {
                                    &s._0
                                })
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowConfigValue_Boolean<'__facet>,
                                _0
                            ))
                            .flags(::facet::FieldFlags::EMPTY)
                            .attributes(&const { [] })
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("BoolValue")
                        .attributes(&[::facet::VariantAttribute::Rename("BoolValue")])
                        .discriminant(2i64)
                        .fields(::facet::StructDef::builder().tuple().fields(fields).build())
                        .build()
                },
            ]
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(
                &const {
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f,
                        "ConfigValue"
                    ))
                },
            )
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(__facet_variants)
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
