facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__enum_with_nested_generic_in_variant_one_level.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(u8)]\n        enum OneLevelNested<T> {\n            VariantA(Result<T, String>),\n            VariantB(Option<T>),\n            // Also include a unit variant to check un-nested\n            Plain,\n        }\n        \"#)"
---
#[automatically_derived]
#[allow(non_camel_case_types)]
unsafe impl<'__facet, T> ::facet::Facet<'__facet> for OneLevelNested<T>
where
    T: ::facet::Facet<'__facet>,
{
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __Shadow_RustRepr_Tuple_for_OneLevelNested_VariantA<'__facet, T>
        where
            T: ::facet::Facet<'__facet>,
        {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet (), T)>,
            _0: Result<T, String>,
        }
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __Shadow_RustRepr_Tuple_for_OneLevelNested_VariantB<'__facet, T>
        where
            T: ::facet::Facet<'__facet>,
        {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet (), T)>,
            _0: Option<T>,
        }
        let __facet_variants: &'static [::facet::Variant] = &const {
            [
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("0")
                            .shape(|| {
                                ::facet::shape_of(
                                    &|s: &__Shadow_RustRepr_Tuple_for_OneLevelNested_VariantA<
                                        '__facet,
                                        T,
                                    >| &s._0,
                                )
                            })
                            .offset(::core::mem::offset_of!(
                                __Shadow_RustRepr_Tuple_for_OneLevelNested_VariantA<'__facet, T>,
                                _0
                            ))
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("VariantA")
                        .discriminant(0i64)
                        .fields(::facet::StructDef::builder().tuple().fields(fields).build())
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("0")
                            .shape(|| {
                                ::facet::shape_of(
                                    &|s: &__Shadow_RustRepr_Tuple_for_OneLevelNested_VariantB<
                                        '__facet,
                                        T,
                                    >| &s._0,
                                )
                            })
                            .offset(::core::mem::offset_of!(
                                __Shadow_RustRepr_Tuple_for_OneLevelNested_VariantB<'__facet, T>,
                                _0
                            ))
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("VariantB")
                        .discriminant(1i64)
                        .fields(::facet::StructDef::builder().tuple().fields(fields).build())
                        .build()
                },
                ::facet::Variant::builder()
                    .name("Plain")
                    .discriminant(2i64)
                    .fields(::facet::StructDef::builder().unit().build())
                    .build(),
            ]
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .type_params(&[::facet::TypeParam {
                name: "T",
                shape: || <T as ::facet::Facet>::SHAPE,
            }])
            .vtable(
                &const {
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f,
                        "OneLevelNested"
                    ))
                },
            )
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(__facet_variants)
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
