facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__enum_with_rename_all.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(u8)]\n        #[facet(rename_all = \"snake_case\")]\n        enum ApiResponse {\n            OkResponse {\n                #[facet(rename = \"responseData\")]\n                data: String,\n            },\n            ErrorResponse {\n                code: u32,\n                message: String,\n            },\n        }\n        \"#)"
---
#[used]
static API_RESPONSE_SHAPE: &'static ::facet::Shape = <ApiResponse as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for ApiResponse {
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        struct __ShadowApiResponse_OkResponse<'__facet> {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            data: String,
        }
        #[repr(C)]
        struct __ShadowApiResponse_ErrorResponse<'__facet> {
            _discriminant: u8,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            code: u32,
            message: String,
        }
        let __facet_variants: &'static [::facet::Variant] = &const {
            [
                {
                    let fields: &'static [::facet::Field] = &const {
                        [::facet::Field::builder()
                            .name("responseData")
                            .shape(|| {
                                ::facet::shape_of(&|s: &__ShadowApiResponse_OkResponse<
                                    '__facet,
                                >| &s.data)
                            })
                            .offset(::core::mem::offset_of!(
                                __ShadowApiResponse_OkResponse<'__facet>,
                                data
                            ))
                            .flags(::facet::FieldFlags::EMPTY)
                            .attributes(
                                &const { [::facet::FieldAttribute::Rename("responseData")] },
                            )
                            .build()]
                    };
                    ::facet::Variant::builder()
                        .name("OkResponse")
                        .discriminant(0)
                        .fields(
                            ::facet::StructDef::builder()
                                .struct_()
                                .fields(fields)
                                .build(),
                        )
                        .attributes(&const { [] })
                        .build()
                },
                {
                    let fields: &'static [::facet::Field] = &const {
                        [
                            ::facet::Field::builder()
                                .name("code")
                                .shape(|| {
                                    ::facet::shape_of(&|s: &__ShadowApiResponse_ErrorResponse<
                                        '__facet,
                                    >| {
                                        &s.code
                                    })
                                })
                                .offset(::core::mem::offset_of!(
                                    __ShadowApiResponse_ErrorResponse<'__facet>,
                                    code
                                ))
                                .flags(::facet::FieldFlags::EMPTY)
                                .attributes(&const { [] })
                                .build(),
                            ::facet::Field::builder()
                                .name("message")
                                .shape(|| {
                                    ::facet::shape_of(&|s: &__ShadowApiResponse_ErrorResponse<
                                        '__facet,
                                    >| {
                                        &s.message
                                    })
                                })
                                .offset(::core::mem::offset_of!(
                                    __ShadowApiResponse_ErrorResponse<'__facet>,
                                    message
                                ))
                                .flags(::facet::FieldFlags::EMPTY)
                                .attributes(&const { [] })
                                .build(),
                        ]
                    };
                    ::facet::Variant::builder()
                        .name("ErrorResponse")
                        .discriminant(1)
                        .fields(
                            ::facet::StructDef::builder()
                                .struct_()
                                .fields(fields)
                                .build(),
                        )
                        .attributes(&const { [] })
                        .build()
                },
            ]
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(
                &const {
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f,
                        "ApiResponse"
                    ))
                },
            )
            .def(::facet::Def::Enum(
                ::facet::EnumDef::builder()
                    .variants(__facet_variants)
                    .repr(::facet::EnumRepr::U8)
                    .build(),
            ))
            .build()
    };
}
